# smidir

./: .gitignore  Dockerfile  README.md  pyproject.toml
.agent/skills/smidir_content/: SKILL.md
scripts/: release.sh
src/smidir/: cli.py
src/smidir/resources/filters/: mermaid.lua
src/smidir/resources/templates/: blank.odt
test_document/: content.md  vars.yml
tests/: test_cli.py  test_dots.py
tests/data/yaml_doc/: content.yml  intro.md
tests/data/yaml_doc/features/: content.yml  feat1.md  feat2.md  vars.yml
